Fixed Top Navigation Button Text Not Showing

--- a/frontend/static/src/styles/_homepage.css
+++ b/frontend/static/src/styles/_homepage.css
@@ -47,7 +47,7 @@ header {
 }
 
 .nav-text {
-	color: yellow;
+	color: white;
 }
 
 .top-nav {
